# python

./: .gitignore  Archiver.py  MOVE  annual_dual_failure_probability.py  array.py  circle.py  funk.py  morse.py  prefoment_test.py  pyproject.toml  resorese.txt  ruff.toml  sqlalchmy.py
Advent_of_code/2022/: DAY1.py  DAY2.py  DAY3.py
Advent_of_code/2023/: DAY03_Part1.py  DAY04_Part2.py  DAY06_Part1.py  DAY09_Part2.py  DAY10_Part1.py  DAY11_Part1.py  DAY11_Part2.py  DAY12_Part1.py  DAY1_Part1.py  DAY1_Part2.py  DAY2_Part1.py  DAY2_Part2.py  DAY3_Part1.py  DAY3_Part2.py  DAY4_Part1.py  DAY4_Part2.py  DAY6_Part1.py  DAY7_Part1.py  DAY7_Part2.py  DAY8_Part1.py  DAY8_Part2.py  DAY9_Part1.py  DAY9_Part2.py
Arch_Backup/: Arch_backup.py  Arch_backup.sh  Arch_backup_opner.py
Chalenges/: FirstDayOfNextMonth.py  FizzBuzz.py  PrimeChecker.py
Chorus_Stuff/: app.py  file_store_api.py
Chorus_Stuff/static/: style.css
Chorus_Stuff/templates/: directory.html  index.html  upload.html
Git_Playground/: example.py
OLD_Code_Home/: avrage.py
OLD_Code_Home/edabit/: cilender.py  multiplication.py  profet.py  tryandside.py
PYDATA2023/: golfChallenge1.py  golfChallenge2.py  golfChallenge3.py
advent_of_code/2022/: DAY1.py  DAY2.py  DAY4.py
advent_of_code/2023/: DAY01_Part1.py  DAY02_Part2.py  DAY03_Part2.py  DAY04_Part1.py  (+6 more)
edabit/: factorial.py  notlen.py  secconverter.py  test.py
examples/: advanced_flow.py  cursor_template.py
media_manager/: media_scaner.py  media_scanner.py  test_media_scanner.py
python_asm/: Cargo.toml  rust_interface.py  rust_interface_test.py
(+12 files in other folders)
